Adding automated tests for admin and fixing security breach regarding non admin that could delete tutorial settings for specific tid

--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,6 @@ wp-content/cache/
 wp-content/upgrade/
 wp-content/uploads/
 wp-content/wp-cache-config.php
-
+#ignore code coverage results
+/log
 
