Fix Travis CI integration and adding Grunt.js for PHPUnit and WordPress coding standards tests

--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,7 @@ wp-content/uploads/
 wp-content/wp-cache-config.php
 #ignore code coverage results
 /log
+#ignore node_modules for grunt
+node_modules
+npm-debug.log
 
