--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "grunt": "^0.4.5",
     "grunt-phpcs": "^0.4.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-sass": "^1.1.0"
+  },
   "scripts": {
     "test": "grunt phpcs"
   },
